# trexsql-ext

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.core  Dockerfile.dev  README.md  deno.json  docker-compose.dev.yml  docker-compose.pg-trex.yml  docker-compose.yml  jitpack.yml  package-lock.json  package.json
bao/: .gitignore  (+4 more)
ext/etl/: Cargo.toml  Makefile  extension-ci-tools
ext/etl/src/: credential_mask.rs  destination.rs  etl_start.rs  etl_status.rs  etl_stop.rs  gossip_bridge.rs  lib.rs  pipeline_registry.rs  store.rs  type_mapping.rs
ext/etl/test/sql/: etl.test
ext/fhir/: .gitignore  Cargo.toml  Dockerfile
ext/fhir/src/: error.rs  lib.rs
ext/fhir/src/cql/: valueset.rs
ext/fhir/src/export/: ndjson.rs
ext/fhir/src/fhir/: bundle_processor.rs  mod.rs  search_parameter.rs
ext/fhir/src/handlers/: crud.rs  dataset.rs  health.rs  measure.rs  metadata.rs
ext/flight/: Cargo.toml  Makefile  package.json
ext/flight/src/: flight_server.rs  logging.rs
ext/flight/test/sql/: flight.test
ext/hana/: Cargo.toml  Makefile
ext/hana/src/: hana_execute.rs  hana_scan.rs  hana_state.rs  lib.rs  wasm_lib.rs
ext/hana/tests/: extension_integration.rs  hana_integration.rs
ext/hana/tests/common/: mod.rs
ext/migration/: .gitignore  Cargo.toml  Makefile
ext/migration/src/: lib.rs
ext/migration/test/sql/: migration.test
ext/migration/test/sql/migrations_perf/: V1004__create_perf_table_4.sql  V1005__create_perf_table_5.sql  V1008__create_perf_table_8.sql  V1010__create_perf_table_10.sql  V1012__create_perf_table_12.sql  V1024__create_perf_table_24.sql  V1028__create_perf_table_28.sql  V1030__create_perf_table_30.sql  V1040__create_perf_table_40.sql  V1046__create_perf_table_46.sql  V1049__create_perf_table_49.sql  V1051__create_perf_table_51.sql  V1055__create_perf_table_55.sql  V1059__create_perf_table_59.sql  V1062__create_perf_table_62.sql  V1070__create_perf_table_70.sql  V1074__create_perf_table_74.sql  V1076__create_perf_table_76.sql  V1078__create_perf_table_78.sql  V1086__create_perf_table_86.sql  (+3 more)
ext/pgwire/: Cargo.toml  Makefile
ext/pgwire/src/: lib.rs  pgwire_server.rs  query_executor.rs  server_registry.rs
ext/swarm/: .gitignore  Cargo.toml  Makefile
ext/swarm/src/: admission.rs  aggregation.rs  catalog.rs  config.rs  coordinator.rs  distributed_scheduler.rs  distributed_table_provider.rs  duckdb_table_provider.rs  federation_executor.rs  lib.rs  orchestrator.rs  partition.rs  server_registry.rs  service_functions.rs  shuffle_reader.rs  shuffle_registry.rs  shuffle_writer.rs
ext/swarm/test/sql/: swarm_distributed.test  swarm_query.test
ext/tpm/: Cargo.toml  Makefile  README.md  package.json
ext/tpm/.github/workflows/: MainDistributionPipeline.yml
ext/tpm/src/: lib.rs
ext/tpm/src/npm/: registry.rs
ext/tpm/test/sql/: tpm_functions.test
hana/: Cargo.toml  Makefile  package.json
hana/src/: hana_execute.rs  hana_scan.rs  lib.rs
hana/test/sql/: hana_scan.test
hana/tests/: extension_integration.rs  hana_integration.rs
hana/tests/common/: mod.rs
plugins/ai/: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.cuda  Makefile  build.sh  extension_config.cmake
plugins/ai/configure/: extension_version.txt
plugins/ai/src/: ai_backend_bridge.cpp  ai_capi.c  ai_core.cpp  ai_functions.c  http_downloader.cpp
plugins/ai/src/include/: ai_core.hpp  ai_functions.h  http_downloader.hpp
plugins/ai/test/sql/: ai_all_functions.test  ai_all_functions_with_download.test  ai_model_dependent.test  ai_no_download.test  ai_no_model_required.test  ai_performance.test  ai_tiny_download.test  ai_ultra_minimal.test
plugins/chdb/: Cargo.toml  Makefile
plugins/chdb/src/: functions.rs  lib.rs  scalar.rs  types.rs  vtab.rs
plugins/db/: Cargo.toml  Makefile  package.json
plugins/db/src/: aggregation.rs  catalog.rs  connection_pool.rs  coordinator.rs  duckdb_final_pass.rs  duckdb_sql_executor.rs  duckdb_table_provider.rs  federation_executor.rs  flight_client.rs  flight_server.rs  gossip.rs  lib.rs  local_connections.rs  logging.rs  metrics.rs  orchestrator.rs  partition.rs  pool.rs  service_functions.rs  sharded_schema_provider.rs  shuffle_optimizer.rs  shuffle_partition.rs  shuffle_registry.rs  shuffle_writer.rs
plugins/db/test/sql/: db.test  db_distributed.test  db_query.test
plugins/etl/: .gitignore  Cargo.toml  Makefile  extension-ci-tools  package.json
plugins/etl/src/: destination.rs  etl_start.rs  etl_status.rs  gossip_bridge.rs  lib.rs  pipeline_registry.rs  store.rs  type_mapping.rs
plugins/etl/test/sql/: etl.test
plugins/etl/tests/: destination_test.rs
plugins/pg_trex/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  initdb-pg_trex.sh  pg_trex.control
plugins/pg_trex/sql/: pg_trex--0.1.0.sql
plugins/pg_trex/src/: arrow_to_pg.rs  catalog.rs  custom_scan.rs  guc.rs  ipc.rs  pg_attach.rs  pg_scan.rs  pg_state.rs  planner.rs  spi_bridge.rs  types.rs  worker.rs
plugins/pgt/: Cargo.toml
plugins/pgt/src/: config.rs  error.rs  lib.rs  main.rs
plugins/pgt/src/dialects/: mod.rs
plugins/pgt/src/generator/: dialect.rs  main.rs  mod.rs
plugins/pgt/src/parser/: mod.rs
plugins/pgt/src/rules/: mappings.rs  patterns.rs
plugins/pgt/src/utils/: mod.rs
plugins/pgt/tests/: test_advanced_sql.rs  test_duckdb_dialect.rs  test_enhanced_configuration.rs  test_enhanced_error_handling.rs  test_serial_transformation.rs
plugins/pool/: Cargo.toml  Makefile  package.json
plugins/pool/configure/: extension_version.txt
plugins/pool/src/: lib.rs
plugins/runtime/: .npmignore  Cargo.toml  Makefile
plugins/runtime/.cargo/: config.toml
plugins/runtime/ext/trex/: Cargo.toml  connection.rs  lib.rs  query_executor.rs  test.ts
plugins/runtime/main/: index.ts
plugins/runtime/main/registry/: registry-handler.ts
plugins/runtime/src/: bundle.rs  lib.rs  trex_server.rs
plugins/transform/: Cargo.toml  Makefile
plugins/transform/src/: dag.rs  freshness.rs  lib.rs  parser.rs  plan.rs  project.rs  run.rs  seed.rs  state.rs  test.rs
plugins/transform/test/sql/: transform.test
(+1292 files in other folders)
