[package]
name = "hana_scan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "hana_scan"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.3.2", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }
hdbconnect = "0.31.0"  # Using older version compatible with current Cargo
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.10"
