[package]
name = "etl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[features]
default = ["loadable-extension"]
loadable-extension = [
    "duckdb/loadable-extension",
    "duckdb/vtab-loadable",
    "duckdb/vscalar",
    "libduckdb-sys/loadable-extension",
    "dep:duckdb-loadable-macros",
]

[dependencies]
duckdb = { version = "1.4.4" }
duckdb-loadable-macros = { version = "0.1.11", optional = true }
libduckdb-sys = { version = "1.4.4" }

etl-lib = { git = "https://github.com/supabase/etl", package = "etl" }
etl-config = { git = "https://github.com/supabase/etl" }
etl-postgres = { git = "https://github.com/supabase/etl" }

tokio = { version = "1", features = ["rt", "sync"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
