[package]
name = "flight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "flight"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }
arrow-flight = { version = "56", features = ["flight-sql-experimental"] }
arrow = { version = "56", features = ["ipc"] }
arrow-schema = "56"
arrow-array = "56"
arrow-ipc = "56"
tonic = { version = "0.13", features = ["tls-ring"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
