[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }
siphasher = "1"
chrono = "0.4"
