[package]
name = "pgwire"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "pgwire"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }
pgwire = { version = "0.32.1", features = ["server-api-aws-lc-rs", "scram"] }
tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "time"] }
arrow-pg = "0.4.1"
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"
crossbeam-channel = "0.5"
