[package]
name = "tpm"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "tpm"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }

# NPM functionality
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
semver = "1.0"
sha1 = "0.10"
