[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# NOTE: lto=true + this dep graph (datafusion + arrow + tonic + ring +
# aws-lc-sys) OOM-kills the linker on memory-constrained machines. The
# federated TIMESTAMPTZ fix agent dropped to lto=false / codegen-units=16
# for the same reason. Restore lto=true once we have a build host with
# enough RAM headroom.
lto = false
codegen-units = 16
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "db"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex", features = ["vtab-loadable", "vscalar", "vtab-arrow", "appender-arrow"] }
duckdb-loadable-macros = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex" }
libduckdb-sys = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex", features = ["loadable-extension"] }
chitchat = "0.10"
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow = { version = "57", features = ["ipc"] }
arrow-schema = "57"
arrow-array = "57"
arrow-ipc = "57"
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
# Pinned to control feature set: rustls 0.23+ requires explicit CryptoProvider.
# Pin to `ring` only (not aws-lc-rs) to match the explicit ring install in
# flight_server.rs and flight_client.rs and avoid auto-selection panics.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
ahash = "0.8"
sqlparser = { version = "0.53", features = ["visitor"] }
crossbeam-channel = "0.5"
trex-pool-client = { path = "../pool-client" }
futures = "0.3"
async-trait = "0.1"

# DataFusion distributed query engine
datafusion = "51"
datafusion-federation = { version = "0.4.12", features = ["sql"] }
