[package]
name = "trex-pool"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "pool"
crate-type = ["cdylib"]

[dependencies]
duckdb = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex", features = ["vtab-loadable"] }
duckdb-loadable-macros = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex" }
libduckdb-sys = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex", features = ["loadable-extension"] }
crossbeam-channel = "0.5"
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
arrow-ipc = "57"
arrow-schema = "57"
arrow-array = "57"
