[package]
name = "trexas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
strip = true

[dependencies]
# trexsql bindings
duckdb = { version = "1.4.4", features = ["vtab-loadable", "vtab-arrow", "vscalar"] }
duckdb-loadable-macros = "0.1.14"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }

# local path deps via submodule
deno_facade = { path = "./trex-runtime/crates/deno_facade" }
deno = { path = "./trex-runtime/deno" }
ext_workers = { path = "./trex-runtime/ext/workers" }
trex_core = { version = "0.1.0", path = "./ext/trex" }
base = { version = "0.1.0", path = "./trex-runtime/crates/base", features = ["trex"] }

# explicit versions (were workspace = true)
anyhow = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.23.11", default-features = false, features = ["logging", "std", "tls12", "ring"] }
env_logger = "0.11"
tracing = "0.1"

[features]
default = []

# All [patch.crates-io] entries from the trex-runtime workspace Cargo.toml.
# Patches only apply at the top-level crate, so they must be duplicated here.
[patch.crates-io]
# trex_core — resolved from local ext/trex for base's optional dep
trex_core = { path = "./ext/trex" }

# DuckDB Rust bindings fork
duckdb = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex" }
libduckdb-sys = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex" }
duckdb-loadable-macros = { git = "https://github.com/p-hoffmann/trexsql-rs", tag = "v1.4.4-trex" }

# Standalone forks
eszip = { git = "https://github.com/p-hoffmann/eszip", branch = "supabase-v0.109.0-edge-runtime" }
v8 = { git = "https://github.com/p-hoffmann/rusty_v8", branch = "supabase-v147.3.0" }

# Deno monorepo fork — pinned to the trex-v2.7.12 branch.
deno_core = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_fs = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_io = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_net = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_console = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_telemetry = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
ext_node = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_resolver = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_npm_installer = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_npmrc = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_node_crypto = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_node_sqlite = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_config = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_crypto_provider = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_features = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_fetch = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_maybe_sync = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_npm_cache = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_package_json = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_permissions = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_process = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_signals = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_subprocess_windows = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_tls = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
node_resolver = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_npm = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_cache_dir = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
deno_lockfile = { git = "https://github.com/p-hoffmann/deno", branch = "trex-v2.7.12" }
