[package]
name = "trex_core"
version = "0.1.0"
authors = [""]
edition = "2021"
license = "Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
deno_core = "0.363.0"
deno_error = "=0.7.0"
duckdb = { version = "1.4.4", features = ["vtab-arrow"] }
chrono = { version = "0.4.40", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
thiserror = "1.0"
arrow-json = { version = "54.0.0" }
arrow-array = { version = "54.0.0", features = ["chrono-tz"] }
arrow-schema = { version = "54.0.0" }
arrow-data = { version = "54.0.0" }
bytes = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["std"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1.3.0", features = ["v4"] }
base64 = "0.21.7"
crossbeam-channel = "0.5"

[dev-dependencies]
clap = { version = "4.5.16", default-features = true, features = [
    "std",
    "derive",
] }
tracing-subscriber = { version = "0.3", default-features = true, features = [
    "env-filter",
] }
serial_test = "3.0.0"

[features]
default = []
